--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </style>
 
 <article>
-    <h1>I&rsquo;ll be back soon!</h1>
+    <h1>I&rsquo;ll be back !</h1>
     <div>
-        <p>Sorry for the inconvenience but I am performing some maintenance on myself. I am upgrading and becoming new and brave. If you need to you can always <a href="mailto:mishraarvind2222@gmail.com">contact us</a>, otherwise I&rsquo;ll be back online shortly!</p>
-        <p>&mdash; The Team</p>
+        <p>Sorry for the inconvenience but I am performing some maintenance on myself&#128519;. I am upgrading and becoming brave and new. If you need to you can always <a href="mailto:mishraarvind2222@gmail.com">contact me</a>, otherwise I&rsquo;ll be back online shortly!</p>
+        <p>&mdash; The DUDE</p>
     </div>
 </article>
